# lefishe-renderer

./: .gitignore  CMakeLists.txt  README.md
include/: application.h  buffer.h  camera.h  component.h  draw_call.h  event_bus.h  framebuffer.h  global_header.h  id_generator.h  input_listener.h  logger.h  material.h  material_manager.h  object.h  object_loader.h  post_processing.h  program.h  program_manager.h  render_command_queue.h  renderer.h  scene.h  screen_space_quad.h  shader.h  texture.h  texture_loader.h  texture_manager.h  window.h
resource/asset/sphere/: license.txt  scene.gltf
resource/shader/: common.shader  frag_common.shader  screen_space_quad.shader  vert_common.shader
src/: application.cpp  buffer.cpp  camera.cpp  component.cpp  draw_call.cpp  framebuffer.cpp  id_generator.cpp  input_listener.cpp  logger.cpp  main.cpp  material.cpp  material_manager.cpp  object.cpp  object_loader.cpp  program.cpp  program_manager.cpp  render_command_queue.cpp  renderer.cpp  scene.cpp  screen_space_quad.cpp  shader.cpp  texture.cpp  texture_loader.cpp  texture_manager.cpp  window.cpp
src/glad/: glad.c
